--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
     "react-feather": "^2.0.10",
+    "react-owl-carousel": "^2.3.3",
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.20.0",
     "react-scripts": "5.0.1",
